--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/average-tab/average-tab.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/average-tab/average-tab.component.html
@@ -32,51 +32,66 @@
                                     <label for="AsOnDate">Effective From</label>
                                 </div>
                             </div>
-                            <button cButton class="btn btn-primary btnSaveColor mt-4 me-1" (click)="ReloadAllDataTable()">Pull Data From AMBS</button>
+                            <button cButton class="btn btn-primary btnSaveColor mt-4 me-1" (click)="LoadData()">Pull Data From AMBS</button>
                         </form>
                     </div>
                 </div>
             </div>
             <br>
-            <div *ngIf ="true">
+
             <div class="row overflow-auto">
-                <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" ng-show="0" class="table table-bordered row-border datatableStyle hover" visibility="false">
+                <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-bordered row-border datatableStyle hover" visibility="false">
                     <thead>
                         <tr>
-                            <th>SL No.</th>
-                            <th>Branch Name</th>
-                            <th>Staff TurnOver(%)</th>
+                            <th rowspan="2">SL No.</th>
+                            <th rowspan="2">Branch Name</th>
+                            <th colspan="2">Overdue</th>
+                            <th colspan="2">Collection</th>
+                            <th colspan="2">Loan Disbursement</th>
+                            <th colspan="2">LO Productivity</th>
+                            <th colspan="2">Staff Turnover</th>
+                            <th colspan="2">Fraud And Misappropriation</th>
+                            <th colspan="3">Average</th>
+                        </tr>
+                        <tr>
+                            <th>Rating</th>
                             <th>Score</th>
                             <th>Rating</th>
+                            <th>Score</th>
+                            <th>Rating</th>
+                            <th>Score</th>
+                            <th>Rating</th>
+                            <th>Score</th>
+                            <th>Rating</th>
+                            <th>Score</th>
+                            <th>Rating</th>
+                            <th>Score</th>
+                            <th>Rating</th>
+                            <th>Score</th>
+                            <th>Frequency</th>
                         </tr>
+
                     </thead>
                     <tbody *ngIf="riskAssesmentOverdue?.length != 0">
                         
                         <tr *ngFor="let riskAssessment of riskAssesmentOverdue; let i = index">
                             <td> {{i + 1}} </td>
                             <td>{{ riskAssessment.branchName }}</td>
-                            <td>
-                                <div>
-                                    <input type="text" class="form-control" id="conversionRate" placeholder="conversionRate">
-                                </div>
-                            </td>
-                            <td>
-                                <div form-floating>
-                                    <select aria-label="Floating label select example" (change)="GetRating($event, i)" cSelect id="Score" name="Score">
-                                        <option value=null>Select</option>
-                                        <option value="Low"> 1 </option>
-                                        <option value="Medium"> 2 </option>
-                                        <option value="High"> 3 </option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td> 
-                                <div form-floating>
-                                    <select aria-label="Floating label select example" cSelect id="Rating" name="Rating">
-                                        <option value=null>{{selectedValue[i]}}</option>
-                                    </select>
-                                </div>
-                            </td>
+                            <td>{{ riskAssessment.amount }}</td>
+                            <td>{{ riskAssessment.amountConverted }}</td>
+                            <td> {{ riskAssessment.riskCriteria.commonValueRatingType.text }} </td>
+                            <td> {{ riskAssessment.riskCriteria.commonValueRatingType.value }} </td>
+                            <td> {{ tableTempData }}</td>
+                            <td> {{i + 1}} </td>
+                            <td>{{ riskAssessment.branchName }}</td>
+                            <td>{{ riskAssessment.amount }}</td>
+                            <td>{{ riskAssessment.amountConverted }}</td>
+                            <td> {{ riskAssessment.riskCriteria.commonValueRatingType.text }} </td>
+                            <td> {{ riskAssessment.riskCriteria.commonValueRatingType.value }} </td>
+                            <td> {{ tableTempData }}</td>
+                            <td> {{i + 1}} </td>
+                            <td>{{ riskAssessment.branchName }}</td>
+                            <td>{{ riskAssessment.amount }}</td>
                         </tr>
                     </tbody>
                     <tbody *ngIf="riskAssesmentOverdue?.length == 0">
@@ -86,7 +101,6 @@
                     </tbody>
                 </table>
             </div>
-        </div>
         </div>
     </div>
 </div>
