--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/risk-assessment-view.component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/risk-assessment-view.component.html
@@ -38,6 +38,7 @@
 <c-nav variant="tabs">
   <a [active]="true" [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="0" cNavLink>Overdue</a>
   <a [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="1" cNavLink>Staff Turnover</a>
+  <a [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="2" cNavLink>Average</a>
 </c-nav>
 <c-col xs="12">
   <c-card class="mb-4">
@@ -50,5 +51,10 @@
       <!-- staff turnover -->
       <c-tab-pane class="p-3">
         <app-staff-turnover> </app-staff-turnover>
+      </c-tab-pane>
+
+      <!-- average -->
+      <c-tab-pane class="p-3">
+        <app-average-tab> </app-average-tab>
       </c-tab-pane>
     </c-tab-content>
