--- a/src/ui/internal-audit/src/app/views/private/security/access-privilege/access-privilege.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/access-privilege/access-privilege.component.html
@@ -19,12 +19,25 @@
                       Password Length
                   </c-card-header>
                   <c-card-body class="form-inline" >
-                      <span class="text-danger">* </span>
-                      <label for="minLength"> Minimum Length :</label>
-                      <input id="minLength" type="number" min="1" formControlName="minLength" name="minLength"  (keyup)="numberOnly($event,'minLength')" (keydown)="numberOnly($event, 'minLength')">
-                      <span class="text-danger"> * </span>
-                      <label for="maxLength">Maximum Length :</label>
-                      <input id="maxLength" type="number" min="1" formControlName="maxLength" name="maxLength" (keyup)="numberOnly($event,'maxLength')" (keydown)="numberOnly($event, 'maxLength')">
+                                          
+                    <label for="minLength"> Minimum Length :</label>
+                    <input id="minLength" type="number" min="1" formControlName="minLength" name="minLength"  (keyup)="numberOnly($event,'minLength')" (keydown)="numberOnly($event, 'minLength')">                    
+                    <label for="maxLength">Maximum Length :</label>
+                    <input id="maxLength" type="number" min="1" formControlName="maxLength" name="maxLength" (keyup)="numberOnly($event,'maxLength')" (keydown)="numberOnly($event, 'maxLength')">
+                    <div>
+                    <div cRow *ngIf="accessPrivilegeForm.get('minLength')?.invalid && accessPrivilegeForm.get('minLength')?.errors &&
+                          (accessPrivilegeForm.get('minLength')?.dirty || accessPrivilegeForm.get('minLength')?.touched)">
+                      <small class="text-danger" *ngIf="accessPrivilegeForm.get('minLength').hasError('required')">
+                        Minimum Length is required.
+                      </small>                                 
+                    </div>
+                    <div cRow *ngIf="accessPrivilegeForm.get('maxLength')?.invalid && accessPrivilegeForm.get('maxLength')?.errors &&
+                          (accessPrivilegeForm.get('maxLength')?.dirty || accessPrivilegeForm.get('maxLength')?.touched)">
+                      <small class="text-danger" *ngIf="accessPrivilegeForm.get('maxLength').hasError('required')">
+                        Maximum Length is required.
+                      </small>                                 
+                    </div>
+                    </div>
                   </c-card-body>
               </c-card>
               
@@ -43,6 +56,7 @@
                         <label for="maxAlphabet" class="m-1">: Maximum Letters </label>
                         <input type="number" min="1" name="maxAlphabet" formControlName="alphabetLength" class='inline-textbox' (keyup)="numberOnly($event,'alphabetLength')" (keydown)="numberOnly($event, 'alphabetLength')">                              
                         <span class="text-danger"> * </span>
+                        
                         </span>                              
                       </c-col></c-row> 
                       
