--- a/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/overdue-tab/overdue-tab-component.html
+++ b/src/ui/internal-audit/src/app/views/private/branch-audit/risk-assessment-view/overdue-tab/overdue-tab-component.html
@@ -12,24 +12,30 @@
                         <form [formGroup]="pullFromAMBSForm">
                             <input type="hidden" formControlName="id" />
                             <div class="col-md-6">
-                                <div form-floating>
-                                    <select aria-label="Floating label select example" cSelect id="countryId"
-                                        formControlName="countryId" name="countryId">
-                                        <option value=null>Select Country</option>
+                                <div cFormFloating>
+                                    <select aria-label="Floating label select example" cSelect id="empDesignation"
+                                      formControlName="countryId" name="countryId">
+                                      <option value=null>Select Country</option>
                                         <option *ngFor="let country of countries" [value]="country.id">
                                             {{country.name}}
                                         </option>
                                     </select>
-                                </div>
+                                    <label for="countryId" class="dropdownLabel">Designation</label>
+                                  </div>
                                 <div class="form-floating mb-3 mt-4">
                                     <input type="text" class="form-control" formControlName="conversionRate"
                                         id="conversionRate" placeholder="conversionRate">
                                     <label for="floatingInput">Conversion Rate</label>
                                 </div>
+                                <div class="form-floating" style="display: none;">
+                                    <input class="form-control" placeholder="effectiveForm" formControlName="effectiveForm"
+                                        id="effectiveForm" type="date">
+                                    <label for="effectiveForm">Effective From</label>
+                                </div>
                                 <div class="form-floating">
-                                    <input class="form-control" placeholder="AsOnDate" formControlName="AsOnDate"
-                                        id="AsOnDate" type="date">
-                                    <label for="AsOnDate">Effective From</label>
+                                    <input class="form-control" placeholder="effectiveTo" formControlName="effectiveTo"
+                                        id="effectiveForm" type="date">
+                                    <label for="effectiveTo">As On Date</label>
                                 </div>
                             </div>
                             <button cButton class="btn btn-primary btnSaveColor mt-4 me-1" (click)="LoadData()">Pull Data From AMBS</button>
@@ -53,7 +59,7 @@
                     </thead>
                     <tbody *ngIf="riskAssesmentOverdue?.length != 0">
                         
-                        <tr *ngFor="let riskAssessment of riskAssesmentOverdue; let i = index">
+                        <tr *ngFor="let riskAssessment of riskAssesmentOverdue; let i = index" ng-click="rowClickHandler">
                             <td> {{i + 1}} </td>
                             <td>{{ riskAssessment.branchName }}</td>
                             <td>{{ riskAssessment.amount }}</td>
